--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "gatsby": "^2.24.67",
     "gatsby-image": "^2.4.20",
     "gatsby-plugin-feed": "^2.5.13",
@@ -15,6 +16,7 @@
     "gatsby-plugin-manifest": "^2.4.33",
     "gatsby-plugin-offline": "^3.2.30",
     "gatsby-plugin-react-helmet": "^3.3.12",
+    "gatsby-plugin-sass": "^2.3.16",
     "gatsby-plugin-sharp": "^2.6.38",
     "gatsby-remark-copy-linked-files": "^2.3.18",
     "gatsby-remark-images": "^3.3.32",
@@ -24,10 +26,13 @@
     "gatsby-source-filesystem": "^2.3.32",
     "gatsby-transformer-remark": "^2.8.37",
     "gatsby-transformer-sharp": "^2.5.16",
+    "node-sass": "^4.14.1",
     "prismjs": "^1.21.0",
+    "ramda": "^0.27.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "typeface-barlow": "^1.1.13",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "typeface-raleway": "^1.1.13"
