--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nice-blog-templates",
+  "name": "gatsby-nice-blog",
   "private": true,
   "description": "A nice blog template by Abhay Nikam",
   "version": "0.1.0",
@@ -19,6 +19,7 @@
     "gatsby-plugin-react-helmet": "^3.3.12",
     "gatsby-plugin-sass": "^2.3.16",
     "gatsby-plugin-sharp": "^2.6.38",
+    "gatsby-plugin-sitemap": "^2.4.15",
     "gatsby-remark-copy-linked-files": "^2.3.18",
     "gatsby-remark-images": "^3.3.32",
     "gatsby-remark-prismjs": "^3.5.15",
