--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "disqus-react": "^1.0.10",
     "gatsby": "^2.24.67",
     "gatsby-image": "^2.4.20",
+    "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-feed": "^2.5.13",
     "gatsby-plugin-google-analytics": "^2.3.15",
     "gatsby-plugin-manifest": "^2.4.33",
