--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "disqus-react": "^1.0.10",
-    "gatsby": "^2.24.67",
+    "gatsby": "^2.24.80",
     "gatsby-image": "^2.4.20",
+    "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-feed": "^2.5.13",
     "gatsby-plugin-google-analytics": "^2.3.15",
     "gatsby-plugin-manifest": "^2.4.33",
